--- a/Birds/css/main.css
+++ b/Birds/css/main.css
@@ -22,18 +22,18 @@ body {
     color: #fff;
   }
   .container-fluid {
-    padding-top: 200px;
-    padding-bottom: 70px;
+    padding-top: 300px;
+    padding-bottom: 90px;
   }
   .navbar {
     padding-top: 15px;
     padding-bottom: 15px;
-    border: 20px solid black;
+    border: 10px solid brown;
     border-radius: 25px;
     margin-bottom: 0;
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 5px;
   }
   .navbar-nav  li a:hover {
-    color: #1abc9c !important;
+    color: #blue !very important;
   }
